# theflexprotocol

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  howdoyoubuildandstuff.md
cmake/: PlatformIO.cmake
source/: CMakeLists.txt  esp.cpp  hand.hpp  nano.cpp  pico.cpp
source/TinyML/Edge Impluse/Arduino library/EMG_sensors_2_channels_inferencing/: library.properties
source/TinyML/Edge Impluse/Cpp library/: README.txt
source/TinyML/Edge Impluse/Cpp library/model-parameters/: model_metadata.h  model_variables.h
source/TinyML/Edge Impluse/Cpp library/tflite-model/: tflite_learn_1018567_3_compiled.cpp
source/esp/src/: main.cpp
source/nano/: platformio.ini
source/nano/src/: main.cpp
source/pico/: platformio.ini
source/pico/src/: main.cpp
src/: hand.hpp
src/TinyML/Edge Impluse/Arduino library/EMG_sensors_2_channels_inferencing/src/model-parameters/: model_metadata.h  model_variables.h
src/TinyML/Edge Impluse/Arduino library/EMG_sensors_2_channels_inferencing/src/tflite-model/: tflite_learn_1018567_3_compiled.cpp  tflite_learn_1018567_3_compiled.h
src/TinyML/Edge Impluse/Cpp library/tflite-model/: tflite_learn_1018567_3_compiled.h
src/esp/: platformio.ini
src/esp/src/: main.cpp
src/nano/: platformio.ini
src/nano/src/: main.cpp
src/pico_w/: hand.hpp  pico_hand_ble.cpp  pico_handle_ble.gatt
tools/: capture_emg_dataset.py
week2examples/: CMakeLists.txt  esp.cpp
week2examples/esp/: platformio.ini
week2examples/esp/src/: main.cpp
week2examples/nano/src/: main.cpp
(+27 files in other folders)
